--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Simon Dice</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simón dice</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <div class="simon">
         <div class="titulo">Simon Dice</div>
-        <button id="comenzar-juego">Comenzar</button>
+        <button id="comenzar-juego">Start</button>
         <div class="contenedorBotones">
-            <div class="cuadrado rojo"></div>
-            <div class="cuadrado amarillo"></div>
-            <div class="cuadrado azul"></div>
-            <div class="cuadrado verde"></div>
+            <div class="cuadrado rojo" data-cuadrado="rojo"></div>
+            <div class="cuadrado amarillo" data-cuadrado="amarillo"></div>
+            <div class="cuadrado azul" data-cuadrado="azul"></div>
+            <div class="cuadrado verde" data-cuadrado="amarillo"></div>
         </div>
         <div id="round"></div>
+        <div id="mensaje" class="oculto"></div>
     </div>
-    <script src='main.js'></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
