--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset='utf-8'>
@@ -23,6 +23,11 @@
             <div class="cuadrado verde"></div>
         </div>
         <div id="round"></div>
+    <div class="oculto">
+        <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" data-sonido="red"></audio>
+        <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" data-sonido="green"></audio>
+        <audio src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" data-sonido="blue"></audio>
+        <audio src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" data-sonido="yellow"></audio>
     </div>
     <script src='main.js'></script>
 </body>
