--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
     <title>Simon Dice</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="simon">
-        <div class="titulo">Simon Dice</div>
-        <button id="comenzar-juego">Comenzar</button>
-        <div class="contenedorBotones">
-            <div class="cuadrado rojo"></div>
-            <div class="cuadrado amarillo"></div>
-            <div class="cuadrado azul"></div>
-            <div class="cuadrado verde"></div>
-        </div>
-        <div id="round"></div>
+    <main class="juego">
+        <header>
+            <h1 class="cabecera js-cabecera">Microsoft Dice</h1>
+        </header>
+
+        <section class="cuadrado-container js-container unclickable">
+            <div class="cuadrado cuadrado-rojo" data-cuadrado="rojo"></div>
+            <div class="cuadrado cuadrado-verde" data-cuadrado="verde"></div>
+            <div class="cuadrado cuadrado-azul" data-cuadrado="azul"></div>
+            <div class="cuadrado cuadrado-amarillo" data-cuadrado="amarillo"></div>
+        </section>
+
+        <footer class="info-seccion">
+            <button class="boton-comenzar js-comenzar">Jugar</button>
+            <span class="info js-info oculto"></span>
+        </footer>
+    </main>
+
     <div class="oculto">
         <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" data-sonido="red"></audio>
         <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" data-sonido="green"></audio>
